test/types/records/lydia/offsetNotRecord-int.good
offsetNotRecord-int.chpl:1: error: Cannot call c_offsetof on type that is not a record
