test/types/records/lydia/offsetNotRecord-int.chpl
writeln(c_offsetof(int, "x"));
